<resources>
    <string name="app_name">FastJobs</string>
    <string name="txtemail">Enter Email</string>
    <string name="txtpass">Enter Password</string>
    <string name="txtrepass">Repeat Password</string>
    <string name="register">Register</string>
    <string name="send">Send</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="map_key">AIzaSyCrk6LIIuZuOElVIZP7dr2OsfRKpg62uzU</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to">To:</string>
    <string name="categories">Categories</string>
    <string name="location">Location</string>
    <string name="result">Result</string>
    <string name="monetary_unit">VNĐ</string>
    <string name="time_to_display">Time to display (Hour)</string>
    <string name="choose_image">Choose image</string>
    <string name="image">Image</string>
    <string name="distance">Distance (Km)</string>
    <string name="search">Search</string>
    <string name="contact">Contact</string>
    <string name="location_detail">Location detail</string>


</resources>
