<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.RegisterActivity">

    <TextView
        android:id="@+id/textView_enter_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        android:text="@string/txtemail" />

    <EditText
        android:id="@+id/editText_enter_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_enter_username"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="17sp"></EditText>

    <TextView
        android:id="@+id/textView_enter_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText_enter_username"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:text="@string/txtpass" />

    <EditText
        android:id="@+id/editText_enter_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_enter_password"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="17sp"></EditText>

    <TextView
        android:id="@+id/textView_enter_rpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText_enter_password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:text="@string/txtrepass" />

    <EditText
        android:id="@+id/editText_enter_rpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_enter_rpassword"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="17sp"></EditText>

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_enter_rpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/register" />

</RelativeLayout>